deployment/hello-k8s-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-k8s-deployment
  labels:
    app: hello-k8s
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello-k8s
  template:
    metadata:
      labels:
        app: hello-k8s
    spec:
      containers:
        - name: hello-k8s
          image: ghcr.io/tmogdans/hello-k8s:v0.0.2
          imagePullPolicy: Always
          ports:
            - containerPort: 80
      restartPolicy: Always
