deployment/hello-k8s-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-k8s-np
spec:
  type: NodePort
  selector:
    app: hello-k8s
  ports:
    - port: 80
      name: http
      targetPort: 80
